# menos

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  pyproject.toml
api/menos/: config.py  main.py  models.py
api/menos/auth/: signature.py
api/menos/routers/: classification.py  content.py  entities.py  graph.py  health.py  ingest.py  jobs.py  search.py  usage.py  youtube.py
api/menos/services/: agent.py  callbacks.py  chunking.py  classification.py  di.py  docling.py  embeddings.py  entity_extraction.py  entity_resolution.py  jobs.py  keyword_matcher.py  linking.py  llm.py  llm_json.py  llm_providers.py  migrator.py  normalization.py  pipeline_orchestrator.py  reranker.py  resource_key.py  sponsored_filter.py  storage.py  unified_pipeline.py  url_detector.py  youtube.py  youtube_metadata.py
api/migrations/: 20260201-100100_add_indexes.surql  20260201-160500_fix_vector_index_dimension.surql  20260215-120000_annotation_parent_index.surql
api/scripts/: README.md  classify_content.py  classify_transcript.py  delete_video.py  export_summaries.py  fetch_channel_videos.py  fetch_video.py  filter_description_urls.py  ingest_videos.py  list_videos.py  migrate_s3_data.py  query.py  refetch_metadata.py  refetch_selected.py  reprocess_content.py  search_videos.py  signed_request.py  smoke_test.py  url_filter_status.py
api/tests/: conftest.py  test_frontmatter.py
api/tests/integration/: test_agentic_search.py  test_auth.py  test_content.py  test_entities.py  test_entity_extraction_integration.py  test_graph.py  test_health.py  test_tag_filtering.py  test_youtube.py
api/tests/smoke/: conftest.py  test_agentic.py  test_services.py  test_youtube_smoke.py
api/tests/unit/: test_agent.py  (+38 more)
(+58 files in other folders)
